# xfoil_py

./: .gitignore  CMakeLists.txt  README.md  __init__.py  definitions.py  setup.cfg  xfoil.py
cmake_patch/: cmake_lists.patch  osmap_cmake.patch
test/: test.py
test/data/: 0012-2.txt  4412-3.txt  4412-4.txt  4508-5.txt  lower_control_points.pickle  natafoil.txt  upper_control_points.pickle
tests/: test.py
tests/data/: 0012-1-DP.txt  0012-1.txt  4412-3-DP.txt  4508-6-DP.txt  natafoil-DP.txt
utils/: bezierCurve.py  user_options.py  utils.py
xfoil_py/: __init__.py  requires.txt  xfoil.py
xfoil_py/test/: test.py
xfoil_py/test/data/: 0012-2-DP.txt  4412-4-DP.txt  4508-5-DP.txt  4508-6.txt
xfoil_py/utils/: user_options.py  utils.py
