[metadata]
name = xfoil_py
version = 0.0.1
url = https://github.com/HugoxSaraiva/xfoil_py/
license = GNU General Public License v3.0
author = Hugo Saraiva
author_email = hugo.saraiva.nascimento@gmail.com


[options]
packages =
    xfoil_py
tests_require = pandas
install_requires =
    numpy
    matplotlib
    scipy
    python_version >= "3.7"